--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-1. Компонент сетки для упрощенного использования в будушем
-2. Steam Web API
-3. Заполнить контентом 
-4. Графики
+1. Поработать над дизайном
+2. Рабочий поиск
+3. Добить контентом полностью
+4. сделать прайсы правильные
+5. Inspect in-game steam prices buttons
+6. Filters*
