containers and agents

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 1. Design
 2. Search
-3. Agents and Containers
-5. Inspect in-game steam prices buttons
-6. Filters*
+3. Inspect in-game steam prices buttons
+4. Filters*
+5. Page for each skin (containers*)
